# dfdx

./: .gitignore  Cargo.toml  README.md  build.rs  codecov.yml
dfdx/: Cargo.toml  build.rs
dfdx-core/: Cargo.toml  build.rs
dfdx-core/examples/: 01-tensor.rs  02-ops.rs  03-gradients.rs  04-tensor-broadcast-reduce.rs
dfdx-core/src/: lib.rs
dfdx-core/src/data/: arange.rs  batch.rs  collate.rs  one_hot_encode.rs  stack.rs
dfdx-core/src/nn_traits/: mod.rs  tuples.rs  vecs.rs
dfdx-core/src/shapes/: axes.rs  broadcasts.rs  mod.rs  permutes.rs  shape.rs
dfdx-core/src/tensor/: README.md  cache.rs  error.rs  ghost.rs  gradients.rs  mod.rs  numpy.rs  safetensors.rs  storage_traits.rs  tensor_impls.rs  tensorlike.rs
dfdx-core/src/tensor/cpu/: allocate.rs  device.rs  mod.rs
dfdx-core/src/tensor/cuda/: allocate.rs  device.rs  mod.rs
dfdx-core/src/tensor/webgpu/: allocate.rs  device.rs  mod.rs  resources.rs  types.rs
dfdx-core/src/tensor_ops/: README.md  broadcast_to.rs  log_softmax.rs  logsumexp_to.rs  mean_to.rs  mod.rs  normalize.rs  normalize_rms.rs  optim.rs  permute_to.rs  prelu.rs  realize_to.rs  softmax.rs  stddev_to.rs  tri.rs  var_to.rs
dfdx-core/src/tensor_ops/abs/: abs.bwd.glsl  abs.fwd.glsl  abs.wgsl  cpu_kernel.rs  cuda_kernel.rs  mod.rs  webgpu_kernel.rs
dfdx-core/src/tensor_ops/accurate_gelu/: mod.rs  webgpu_kernel.rs
dfdx-core/src/tensor_ops/adam/: cpu_kernel.rs  cuda_kernel.rs  mod.rs  webgpu_kernel.rs
dfdx-core/src/tensor_ops/add/: binary_add.wgsl  mod.rs  webgpu_kernel.rs
dfdx-core/src/tensor_ops/attention_reshape/: attention_reshape.cu  cpu_kernel.rs  cuda_kernel.rs  mod.rs
dfdx-core/src/tensor_ops/axpy/: cpu_kernel.rs  cuda_kernel.rs  mod.rs  webgpu_kernel.rs
dfdx-core/src/tensor_ops/bce/: mod.rs  webgpu_kernel.rs
dfdx-core/src/tensor_ops/boolean/: boolean.cu  cpu_kernels.rs  cuda_kernels.rs  mod.rs  webgpu_kernels.rs
dfdx-core/src/tensor_ops/choose/: cpu_kernel.rs  cuda_kernel.rs  mod.rs  webgpu_kernel.rs
dfdx-derives/: Cargo.toml
dfdx-derives/src/: lib.rs
dfdx-macros/: Cargo.toml  README.md
dfdx-macros/src/: can_update_with_gradients.rs  lib.rs  reset_params.rs
dfdx-macros/tests/: test_can_upgrade_with_gradients.rs  test_reset_params.rs
dfdx-nn/: Cargo.toml
dfdx-nn-core/: Cargo.toml
dfdx-nn-core/src/: lib.rs  tuples.rs  vecs.rs
dfdx-nn-derives/: Cargo.toml
dfdx-nn-derives/src/: lib.rs
dfdx-nn/benches/: batchnorm2d.rs  conv2d.rs
dfdx-nn/examples/: 01-build-module.rs  02-module-forward.rs  03-nn.rs  03-sequential.rs  04-gradients.rs  05-optim.rs  06-mnist.rs  11-multi-headed.rs  12-gradient-accum.rs  generic-train-loop.rs  mlp.rs  models-resnet18.rs  rl-dqn.rs  rl-ppo.rs  safetensors-save-load.rs
dfdx-nn/src/: abs.rs  adam.rs  add_into.rs  avg_pool_global.rs  batch_norm1d.rs  batch_norm2d.rs  bias1d.rs  bias2d.rs  conv2d.rs  conv_trans2d.rs  cos.rs  dropout.rs  embedding.rs  exp.rs  flatten2d.rs  gelu.rs  generalized_add.rs  layer_norm1d.rs  leaky_relu.rs  lib.rs  linear.rs  ln.rs  log_softmax.rs  matmul.rs  max_pool_2d.rs  multi_head_attention.rs  pool_2d_avg.rs  pool_2d_min.rs  pool_global_avg.rs  pool_global_max.rs  pool_global_min.rs  prelu.rs  prelu1d.rs  relu.rs  reshape.rs  residual_add.rs  residual_mul.rs  sgd.rs  sigmoid.rs  sin.rs  (+7 more)
dfdx-nn/src/layers/: add_into.rs  batch_norm1d.rs  batch_norm2d.rs  bias2d.rs  conv1d.rs  conv2d.rs  conv_trans2d.rs  dropout.rs  exp.rs  gelu.rs  generalized_add.rs  generalized_mul.rs  layer_norm1d.rs  leaky_relu.rs  linear.rs  log_softmax.rs  mod.rs  multi_head_attention.rs  pool_2d_max.rs  pool_global_avg.rs  pool_global_min.rs  prelu.rs  prelu1d.rs  residual_add.rs  sin.rs  split_into.rs
dfdx-nn/src/optim/: adam.rs  mod.rs  rmsprop.rs  sgd.rs
dfdx/benches/: batchnorm2d.rs  conv2d.rs  softmax.rs  sum.rs
dfdx/examples/: 01-build-module.rs  01-tensor.rs  02-module-forward.rs  02-tensor-ops.rs  03-sequential.rs  04-gradients.rs  04-tensor-broadcast-reduce.rs  05-tensor-permute.rs  06-mnist.rs  06-tensor-index.rs  07-module-build.rs  08-module-forward.rs  09-module-sequential.rs  10-module-gradients.rs  11-module-optim.rs  12-gradient-accum.rs  12-mnist.rs  13-housing-nn-in-struct.rs  advanced-gradient-accum.rs  advanced-multi-headed.rs  advanced-resnet18.rs  advanced-rl-dqn.rs  advanced-rl-ppo.rs  advanced-train-loop.rs  generic-train-loop.rs  model-transformer.rs  nightly-resnet18.rs  numpy-save-load.rs  rl-ppo.rs  safetensors-save-load.rs  tmp.rs
dfdx/src/: arrays.rs  data.rs  feature_flags.rs  lib.rs  losses.rs  unique_id.rs
dfdx/src/data/: collate.rs  mod.rs  one_hot_encode.rs
dfdx/src/devices/: allocate.rs  foreach.rs
dfdx/src/dtypes/: from_le_bytes.rs
dfdx/src/nn/: conv.rs  impl_module_for_tuples.rs  linear.rs  mod.rs  npz.rs  npz_impls.rs  repeated.rs  residual.rs  split_into.rs
dfdx/src/numpy/: load.rs  mod.rs
dfdx/src/optim/: optimizer.rs
dfdx/src/shapes/: replace_dim.rs
dfdx/src/tensor/: cache.rs  gradients.rs  impl_default.rs  impl_phantom.rs  impl_randomize.rs  impl_tensor_creator.rs  impl_trace.rs  mod.rs  tensorlike.rs  unique_id.rs
dfdx/src/tensor_ops/: impl_backward.rs  impl_broadcast_reduce.rs  impl_clamp.rs  impl_div.rs  impl_dropout.rs  impl_mask.rs  impl_max.rs  impl_mean.rs  impl_nans.rs  impl_softmax.rs  impl_stddev.rs  matmul.rs  mean_to.rs  mod.rs  optim.rs  softmax.rs  utils.rs  var_to.rs
dfdx/tests/: issue_tests.rs
examples/: 01-tensor.rs  02-ops.rs  03-nn.rs  04-gradients.rs  05-optim.rs  06-mnist.rs  07-custom-module.rs  08-tensor-broadcast-reduce.rs  09-tensor-permute.rs  10-tensor-index.rs  11-conv-net.rs  11-multi-headed.rs  12-gradient-accum.rs  12-gradient-accumulation.rs  12-multi-headed.rs  13-housing-nn-in-struct.rs  Cargo.toml  adv-generic-train-loop.rs  batching.rs  chain.rs  classification.rs  conv_net.rs  custom.rs  dqn.rs  generic-train-loop.rs  linear.rs  mnist_classifier.rs  mnist_custom.rs  model-transformer.rs  multi_head.rs  nightly-conv-net.rs  nightly-resnet18.rs  nightly-transformer.rs  nightly-vgg16.rs  nn.rs  npy_serialize.rs  numpy-save-load.rs  ppo.rs  raw_mlp.rs  regression.rs  (+7 more)
(+1127 files in other folders)
