[workspace]
members = ["dfdx", "dfdx-nn-core", "dfdx-nn-derives", "dfdx-nn"]
resolver = "2"

[workspace.dependencies]
num-traits = { version = "0.2.15", default-features = false }
safetensors = { version = "0.3", default-features = false }
memmap2 = { version = "0.5", default-features = false }
rand = { version = "0.8.5", default-features = false, features = ["std_rng"] }
rand_distr = { version = "0.4.3", default-features = false }
libm = "0.2.7"