[package]
name = "dfdx-macros"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

description = "dfdx's procedural macros"
homepage = "https://github.com/coreylowman/dfdx"
documentation = "https://docs.rs/dfdx"
repository = "https://github.com/coreylowman/dfdx"
readme = "README.md"

keywords = [
    "deep-learning",
    "neural-network",
    "backprop",
    "tensor",
    "autodiff",
]

[lib]
proc-macro = true

[features]

[dependencies]
proc-macro2 = "^1.0"
quote = "1"
syn = { version = "^1.0", features = ["full"] }

# If you copy one of the examples into a new project, you should be using
# [dependencies] instead, and delete the **path**.
[dev-dependencies]
dfdx = { version = "0.9.0", path = "../dfdx" }