[package]
name = "dfdx-macros"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

description = "dfdx's procedural macros"
homepage = "https://github.com/coreylowman/dfdx"
documentation = "https://docs.rs/dfdx"
repository = "https://github.com/coreylowman/dfdx"
readme = "README.md"

keywords = [
    "deep-learning",
    "neural-network",
    "backprop",
    "tensor",
    "autodiff",
]

[lib]
proc-macro = true

[features]

[dependencies]
proc-macro2 = "^1.0"
quote = "1"
syn = { version = "^1.0", features = ["full"] }

[dev-dependencies]
dfdx = { version = "0.9.0", path = "../.", features = ["dfdx-macros"] }