[package]
name = "dfdx-nn-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dfdx = { path = "../dfdx", features = ["safetensors"] }
safetensors = { workspace = true }
memmap2 = { version = "0.5", default-features = false }

[features]
nightly = ["dfdx/nightly"]