[package]
name = "dfdx-nn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dfdx-nn-core = { path = "../dfdx-nn-core" }
dfdx-nn-derives = { path = "../dfdx-nn-derives" }
dfdx = { path = "../dfdx" }
safetensors = { workspace = true}
num-traits = "0.2.15"
rand_distr = "0.4.3"
