[package]
name = "dfdx-nn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
tempfile = "3.3.0"
mnist = "0.5.0"
indicatif = "0.17.3"
rand = { workspace = true }

[dependencies]
dfdx-nn-core = { path = "../dfdx-nn-core" }
dfdx-nn-derives = { path = "../dfdx-nn-derives" }
dfdx = { path = "../dfdx" }
safetensors = { workspace = true }
num-traits = { workspace = true }
rand_distr = { workspace = true }

[features]
test-f16 = []
test-amp-f16 = []
test-f64 = []
ci-check = ["dfdx/ci-check"]

[[bench]]
name = "batchnorm2d"
harness = false

[[bench]]
name = "conv2d"
harness = false
