[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"

# If you copy one of the examples into a new project, you should be using
# [dependencies] instead, and delete the **path**.
[dev-dependencies]
dfdx = { version = "0.9.0", path = "../dfdx" }
rand = { version = "0.8.5", features = ["std_rng"] }
mnist = "0.5.0"
indicatif = "0.16.2"

[[example]]
name = "tensor"
path = "01-tensor.rs"

[[example]]
name = "ops"
path = "02-ops.rs"

[[example]]
name = "nn"
path = "03-nn.rs"

[[example]]
name = "gradients"
path = "04-gradients.rs"

[[example]]
name = "optim"
path = "05-optim.rs"

[[example]]
name = "mnist"
path = "06-mnist.rs"

[[example]]
name = "custom-module"
path = "07-custom-module.rs"

[[example]]
name = "tensor-broadcast-reduce"
path = "08-tensor-broadcast-reduce.rs"

[[example]]
name = "tensor-permute"
path = "09-tensor-permute.rs"

[[example]]
name = "tensor-index"
path = "10-tensor-index.rs"

[[example]]
name = "multi-headed"
path = "11-multi-headed.rs"

[[example]]
name = "nightly-conv-net"
path = "nightly-conv-net.rs"

[[example]]
name = "nightly-transformer"
path = "nightly-transformer.rs"

[[example]]
name = "numpy-save-load"
path = "numpy-save-load.rs"

[[example]]
name = "rl-dqn"
path = "rl-dqn.rs"

[[example]]
name = "rl-ppo"
path = "rl-ppo.rs"